--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+**/appsettings.json
 # Created by https://www.toptal.com/developers/gitignore/api/csharp,visualstudio,aspnetcore,dotnetcore
 # Edit at https://www.toptal.com/developers/gitignore?templates=csharp,visualstudio,aspnetcore,dotnetcore
 
